Admedia.css
@media (max-width: 768px){
html,body
  {
      width: 100%;
      height: 100%;
      margin: 0px;
      padding: 0px;
      overflow-x: hidden;
  }
body {
  text-align: center;
}
li {
    display: none;
}
.brand {
  display: block;
}
.barToggle{
  display: block;
}
  #topBar .icon {
  position: absolute;
  right: 50px;
  top: 15px;
  float: right;
  display: block;
}

.starGif2{
  position: absolute;
  top: 400px;
  left: -230px;
  width: 30px;
  z-index: -1;
}
.aboutme{
    position: relative;
    right: 65px;
}
.brand {
  float: left;
  position: relative;
  left:20px;
  bottom: 5px;
}
.block{
  display: block;
  position: relative;
  top: 10px;
  padding: 10px 15px;
  text-align: center;
}

.clock{
  position: relative;
  top: -100px;
  left: -40px;
  text-align: center;
}
.myImage{
  position: absolute;
  left: 85px;
  text-align: center;
  top: 150px;
  width: 300px;
}
.textMypic{
  position: relative;
  top: 250px;
  left: 35px;
}
.breadPit {
  display: none;
}
.starGif{
  left: 150px;
  top: -10px;
}
#myPicSection {
  width: 100%;
  margin-bottom: 300px;
}
h1{
  font-size: 2.5rem;
}
h2{
  margin: 0 auto 3 auto;
  font-size: 1.5rem;
}
.phamaemareePic{
  width:350px;
  position: relative;
  left: 0px;
  top: -30px;
}
.textEdu {

  position: absolute;
  left: 70px;
  top: 250px;
}

.suthi{
  position: absolute;
  left: 25px;
  top: 60px;
  width:350px;
}

.textSuthi{
  margin: 0 auto 0 auto;
  position: relative;
  top: 870px;
  right: -45px;
}
.suthiPic{
  width:350px;
  position: absolute;
  top: 600px;
  left: 50px;
}
.textKmutt{
  position: absolute;
  bottom: -1020px;
  left: 10px;
  padding: 3% 5%;

}
.kmuttPic{
  width: 350px;
  position: absolute;
  bottom: -770px;
  left: 70px;
}

#education {
  padding-bottom: 1150px;
  width: 100%;
}
.textHeadEdu{
  padding: top:0%;
  margin-top: 0px;
}
.educationTable{
  width: 100%;
}
.workExPic{
  width: 400px;
}
.skillTable {
  width: 100%;
  margin: 0 auto 0 auto;
}
.skillPadding{
  padding: 2% 0%;
}
.skillH1{
  padding: 0;
  margin: 0px auto 40px auto;
}
.skillPic {
  width: 70px;
}
.skillPicMicro {
  width: 80px;
  position: relative;
  top: 20px;
}
.fa-language{
  font-size: 3.5rem;
}
.fa-car-side {
  font-size: 2rem;
}
.fa-motorcycle{
  font-size: 2rem;
}
h3 {
  line-height: 1.8;
  font-size: .9rem;
  margin: 10px auto 0 auto;

}
.contactGroup {
  display:block;
  padding-bottom: 5%;
}
.line{
  display:block;
}
.facebook {
  position: relative;
  right: 0px;
  bottom: 0px;
}
.conatactH1{
  padding: 10% 0%;
}
.footer{
  padding: 5% 0%;
}
.pp{
  font-size: 0.8rem;
}

